--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -324,6 +324,11 @@
 	<item>launcher/LPNH_SLOP_PERCENTAGE=71</item>
 	<item>launcher/LPNH_TIMEOUT_MS=400</item>
 
+        <!-- App Cloninig -->
+        <item>app_cloning/cloned_apps_enabled=true</item>
+        <item>app_cloning/delete_all_app_clones_enabled=true</item>
+        <item>app_cloning/enable_app_cloning_building_blocks=true</item>
+
     </string-array>
 
     <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
