--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -312,6 +312,18 @@
 
         <!-- Pixel Launcher -->
         <item>launcher/ENABLE_SMARTSPACE_ENHANCED=true</item>
+	<item>launcher/long_press_home_button_to_search=true</item>
+	<item>launcher/long_press_home_button_to_search_mpr=true</item>
+	<item>launcher/press_hold_nav_handle_to_search=true</item>
+	<item>launcher/press_hold_nav_handle_to_search_mpr=true</item>
+	<item>launcher/ENABLE_LONG_PRESS_NAV_HANDLE=true</item>
+	<item>launcher/ENABLE_LONG_PRESS_NAV_HANDLE_MPR=true</item>
+        <item>launcher/ENABLE_SETTINGS_OSE_CUSTOMIZATIONS=true</item>
+	<item>launcher/INVOKE_OMNI_LPH=true</item>
+	<item>launcher/INVOKE_OMNI_LPH_MPR=true</item>
+	<item>launcher/LPNH_SLOP_PERCENTAGE=71</item>
+	<item>launcher/LPNH_TIMEOUT_MS=400</item>
+
     </string-array>
 
     <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
